k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
